--- a/16. CNN_simpleconvnet.ipynb
+++ b/16. CNN_simpleconvnet.ipynb
@@ -4,28 +4,72 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-1-ad0e6150d2ce>, line 5)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-1-ad0e6150d2ce>\"\u001b[1;36m, line \u001b[1;32m5\u001b[0m\n\u001b[1;33m    filter_num = conv_param{'filter_num'}\u001b[0m\n\u001b[1;37m                           ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class SimleConvNet:\n",
     "    def __init__(self, input_dim = (1, 28, 28),\n",
     "                conv_param={'filter_num':30, 'filter_size':5, 'pad':0, 'stride':1},\n",
     "                hidden_size=100, output_size=10, weight_init_std=0.01):\n",
     "        filter_num = conv_param['filter_num']\n",
-    "        filter_size = conv_param['filter_size'\n",
-    "        filter_pad = conv_param{'pad'}\n",
-    "        filter_stride = conv_param{'stride'}\n",
+    "        filter_size = conv_param['filter_size']\n",
+    "        filter_pad = conv_param['pad']\n",
+    "        filter_stride = conv_param['stride']\n",
     "        input_size = input_dim[1]\n",
     "        conv_output_size = (input_size - filter_size + 2*filter_pad) / filter_stride + 1\n",
-    "        pool_output_siz =  int(filter_num + (conv_output_size/2)*(conv_output_size/2))"
+    "        pool_output_siz =  int(filter_num + (conv_output_size/2)*(conv_output_size/2))\n",
+    "        \n",
+    "        self.params = {}\n",
+    "        self.params['W1'] = weight_init_std*np.random.randn(filter_num, input_dim[0],\n",
+    "                                                           filter_size, filter_size)\n",
+    "        self.params['b1'] = np.zeros(filter_num)\n",
+    "        self.params['W2'] = weight_init_std*np.random.randn(pool_output_size,\n",
+    "                                                           hidden_size)\n",
+    "        self.params['b2'] = np.zeros(hidden_size)\n",
+    "        self.params['W3'] = weight_init_std*np.random.randn(hidden_size,\n",
+    "                                                           output_size)\n",
+    "        self.params['b3'] = np.zeros(output_size)\n",
+    "        \n",
+    "        self.layers = OrderedDict()\n",
+    "        self.layers['Conv1'] = Convolution(self.params['W1'],\n",
+    "                                          self.params['b1'],\n",
+    "                                          conv_params['stride'],\n",
+    "                                          conv_params['pad'])\n",
+    "        self.layers['Relu1'] = Relu()\n",
+    "        self.layers['Pool1'] = Pooling(pool_h=2, pool_w=2, stride=2)\n",
+    "        self.layers['Affine1'] = Affine(self.params['W2'],\n",
+    "                                        self.params['b2'])\n",
+    "        self.layers['Relu2'] = Relu()\n",
+    "        self.layers['Affine2'] = Affine(self.params['W3'],\n",
+    "                                        self.params['b3'])\n",
+    "        self.last_layer = SoftmaxWithLoss()\n",
+    "        \n",
+    "    def predict(self, x):\n",
+    "        for layer in self.layers.values():\n",
+    "            x = layer.forward(x)\n",
+    "        return x\n",
+    "    \n",
+    "    def loss(self, x, t):\n",
+    "        y = self.predict(x)\n",
+    "        return self.last_layer.forward(y, t)\n",
+    "    \n",
+    "    def gradient(self, x, t):\n",
+    "        self.loss(x, t)\n",
+    "        \n",
+    "        dout=1\n",
+    "        dout = self.last_layer.backward(out)\n",
+    "        \n",
+    "        layers = list(self.layers.values())\n",
+    "        layers.reverse()\n",
+    "        for layer in layers:\n",
+    "            dout = layer.backward(dout)\n",
+    "            \n",
+    "        grads = {}\n",
+    "        grads['W1'] = self.layers['Conv1'].dW\n",
+    "        grads['b1'] = self.layers['Conv1'].db\n",
+    "        grads['W2'] = self.layers['Affine1'].dW\n",
+    "        grads['b2'] = self.layers['Affine1'].dW\n",
+    "        grads['W3'] = self.layers['Conv1'].dW\n",
+    "        grads['b3'] = self.layers['Conv1'].dW"
    ]
   },
   {
